Enable Java 21 preview in tests.